--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
-    <title>PcComponentes.com | Tienda de Informática y Tecnología online</title>
+    <title>【Portátiles】 💻¡Súper OFERTAS! | PcComponentes</title>
 </head>
 <body>
     <header></header>
     <main></main>
+    <aside></aside>
     <footer></footer>
 </body>
 </html>
